Add radar points table

--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "bulma": "^0.9.0",
     "next": "9.4.4",
     "react": "16.13.1",
     "react-dom": "16.13.1"
