Require babel-node

--- a/package.json
+++ b/package.json
@@ -5,9 +5,11 @@
     "dev": "babel-node scripts/clearCache.js && next dev",
     "build": "next build",
     "start": "next start",
-    "export": "next export && node scripts/exportSvgs.mjs"
+    "export": "next export && babel-node scripts/exportSvgs.js"
   },
   "dependencies": {
+    "@babel/core": "^7.10.4",
+    "@babel/node": "^7.10.4",
     "bulma": "^0.9.0",
     "next": "9.4.4",
     "react": "16.13.1",
