--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "next": "9.4.4",
     "react": "16.13.1",
     "react-dom": "16.13.1",
-    "sharp": "^0.25.4"
+    "sharp": "^0.25.4",
+    "yaml": "^1.10.0"
   }
 }
