Add themes to radars

--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "next": "9.4.4",
     "react": "16.13.1",
     "react-dom": "16.13.1",
+    "sanitize-html": "^1.27.0",
     "sharp": "^0.25.4",
+    "showdown": "^1.9.1",
     "yaml": "^1.10.0"
   }
 }
