--- a/package.json
+++ b/package.json
@@ -5,13 +5,14 @@
     "dev": "babel-node scripts/clearCache.js && next dev",
     "build": "next build && next export && babel-node scripts/exportImages.js",
     "start": "next start",
-    "prod": "python3 -m http.server --directory out 3000"
+    "prod": "static out -p 3000"
   },
   "dependencies": {
     "@babel/core": "^7.10.4",
     "@babel/node": "^7.10.4",
     "bulma": "^0.9.0",
     "next": "9.4.4",
+    "node-static": "^0.7.11",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "sanitize-html": "^1.27.0",
