--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "sanitize-html": "^1.27.0",
+    "sass": "^1.26.10",
     "sharp": "^0.25.4",
     "showdown": "^1.9.1",
     "yaml": "^1.10.0"
