--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "@babel/node": "^7.10.4",
     "@fortawesome/fontawesome-free": "^5.14.0",
     "bulma": "^0.9.0",
-    "next": "9.4.4",
+    "next": "^9.5.1",
     "node-static": "^0.7.11",
     "react": "16.13.1",
     "react-dom": "16.13.1",
