Add company logos and size chart

--- a/content/radars/2020-06-continuous-delivery.yml
+++ b/content/radars/2020-06-continuous-delivery.yml
@@ -133,3 +133,36 @@ points:
     votes:
       adopt: 1
       hold: 1
+companies:
+  - zalando
+  - spotify
+  - americanexpress
+  - apple
+  - indeed
+  - thermo-fisher-scientific
+  - box
+  - ksat-e80c
+  - snow-software
+  - entegral
+  - opentable
+  - hobsons
+  - lunar-bank
+  - 1-1-mail-media-development-technology-gmbh
+  - ricardo
+  - tradeshift
+  - new-york-times-co
+  - n26
+  - mhi-vestas-offshore-wind
+  - equityzen-inc
+  - under-armour
+  - intuit
+  - nielsen
+  - zendesk
+  - everquote
+  - ant-financial
+  - jd-com
+  - payit
+  - state-farm-insurance
+  - dailymotion
+  - meltwater
+  - trivago
