Load company data from landscape

--- a/content/radars/2020-06-continuous-delivery.yml
+++ b/content/radars/2020-06-continuous-delivery.yml
@@ -134,35 +134,31 @@ points:
       adopt: 1
       hold: 1
 companies:
-  - zalando
-  - spotify
-  - americanexpress
-  - apple
-  - indeed
-  - thermo-fisher-scientific
-  - box
-  - ksat-e80c
-  - snow-software
-  - entegral
-  - opentable
-  - hobsons
-  - lunar-bank
-  - 1-1-mail-media-development-technology-gmbh
-  - ricardo
-  - tradeshift
-  - new-york-times-co
-  - n26
-  - mhi-vestas-offshore-wind
-  - equityzen-inc
-  - under-armour
-  - intuit
-  - nielsen
-  - zendesk
-  - everquote
-  - ant-financial
-  - jd-com
-  - payit
-  - state-farm-insurance
-  - dailymotion
-  - meltwater
-  - trivago
+  - ant-financial-member
+  - spotify-member
+  - apple-member
+  - indeed-member
+  - thermo-fisher-scientific-supporter
+  - box-supporter
+  - ksat-supporter
+  - snow-software-supporter
+  - hobsons-supporter
+  - lunar-supporter
+  - gmx-supporter
+  - ricardo-ch-supporter
+  - the-new-york-times-supporter
+  - n26-supporter
+  - mhi-vestas-offshore-wind-supporter
+  - equity-zen-supporter
+  - under-armour-supporter
+  - intuit-member
+  - nielsen-supporter
+  - zendesk-supporter
+  - ever-quote-supporter
+  - jd-com-member
+  - pay-it-supporter
+  - state-farm-supporter
+  - dailymotion-supporter
+  - meltwater-supporter
+  - trivago-supporter
+  - zalando-supporter
