Move footer to texts.yml

--- a/content/texts.yml
+++ b/content/texts.yml
@@ -1,2 +1,8 @@
+footer: |
+  CNCF is a leading global provider of services for digital transformation and digital business models.
+  CNCF relies exclusively on established Enterprise Open Source technologies. This leads to innovative
+  solutions, digital products and portals in agile software projects, and helps build long-lasting, strategic
+  partnerships with our customers.
+
 hidden_companies: |
   Some companies have requested not to be included in the radar
