--- a/content/industries.yml
+++ b/content/industries.yml
@@ -1,28 +1,28 @@
 ant-financial-member: Financial Services
-spotify-member: Music
+spotify-member: Entertainment
 apple-member: Consumer Electronics
-indeed-member: Recruiting
-thermo-fisher-scientific-supporter: BioTech
+indeed-member: Search Engine
+thermo-fisher-scientific-supporter: Scientific Equipment
 box-supporter: File Sharing
 ksat-supporter: Defense & Space
-snow-software-supporter: Saas
+snow-software-supporter: Software
 hobsons-supporter: Education
-lunar-supporter: Banking
+lunar-supporter: Financial Services
 gmx-supporter: Email
 ricardo-ch-supporter: E-commerce
-the-new-york-times-supporter: News
-n26-supporter: Banking
+the-new-york-times-supporter: News Media
+n26-supporter: Financial Services
 mhi-vestas-offshore-wind-supporter: Energy
 equity-zen-supporter: Financial Services
 under-armour-supporter: E-commerce
-intuit-member: Financial Services
-nielsen-supporter: Information Services
-zendesk-supporter: Customer Service
+intuit-member: Software
+nielsen-supporter: Marketing Research
+zendesk-supporter: Software
 ever-quote-supporter: Insurance
 jd-com-member: E-commerce
-pay-it-supporter: Financial Services
+pay-it-supporter: Digital Platform
 state-farm-supporter: Insurance
-dailymotion-supporter: Video
-meltwater-supporter: Saas
+dailymotion-supporter: Video Hosting
+meltwater-supporter: Software
 trivago-supporter: Travel
 zalando-supporter: E-commerce
