--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@babel/core": "^7.10.4",
     "@babel/node": "^7.10.4",
     "@fortawesome/fontawesome-free": "^5.14.0",
+    "@next/bundle-analyzer": "^9.5.1",
     "bulma": "^0.9.0",
     "chart.js": "^2.9.3",
     "image-size": "^0.8.3",
