--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "@fortawesome/fontawesome-free": "^5.14.0",
     "@next/bundle-analyzer": "^9.5.1",
     "bulma": "^0.9.0",
-    "chart.js": "^2.9.3",
+    "chartist": "^0.11.4",
     "image-size": "^0.8.3",
     "next": "^9.5.1",
     "node-static": "^0.7.11",
