Update photo url

--- a/content/radars/2020-07-image-build.yml
+++ b/content/radars/2020-07-image-build.yml
@@ -20,7 +20,7 @@ sections:
       (for example, Flux).
 team:
   - name: Cheryl Hung
-    photo: https://www.cncf.io/wp-content/uploads/2020/06/image1.png
+    photo: https://www.cncf.io/wp-content/uploads/2020/08/14233189_10101878603974740_6349536740498881867_n-1-1-500x500.jpg
     bio: |
       Cheryl's mission is to make end users successful and productive with cloud native technologies
     twitter: oicheryl
