--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@babel/node": "^7.10.4",
     "@fortawesome/fontawesome-free": "^5.14.0",
     "@next/bundle-analyzer": "^9.5.1",
+    "ajv": "^6.12.4",
     "bulma": "^0.9.0",
     "chartist": "^0.11.4",
     "image-size": "^0.8.3",
