add links to EUC

--- a/content/pages/how-it-works.yml
+++ b/content/pages/how-it-works.yml
@@ -45,7 +45,7 @@
 
     The Radar focuses on future adoption, so we have chosen not to include a Hold ring. 
 
-    ##### Does the Radar reflect the whole market?
+    ##### Does the Tech Radar reflect the whole market?
     
     No, the End User Community is comprised of mostly early adopters looking at modern use cases.
     
@@ -67,11 +67,11 @@
     
     ##### How do I participate in the next Technology Radar?
     
-    Join the End User Community to weigh in on the next Technology Radar.
+    [Join the End User Community](https://www.cncf.io/people/end-user-community/) to weigh in on the next Technology Radar.
     
     ##### How do I join the next Radar Team?
     
-    Be a member of the End User Community, and either volunteer or be randomly selected. Email us at info@cncf.io if you'd like to volunteer.
+    Be a member of the [End User Community](https://www.cncf.io/people/end-user-community/), and either volunteer or be randomly selected. Email us at info@cncf.io if you'd like to volunteer.
 
     ##### Who drives the poll?
     
