--- a/content/pages/how-it-works.yml
+++ b/content/pages/how-it-works.yml
@@ -35,7 +35,7 @@
     The responses are sorted in order to determine the final positions. Finally, the editors curate the responses and write themes to reflect what they see as broader patterns.
 
 
-- title: FAQs
+- title: FAQ
   content: |
     ##### How are the topics and technologies chosen?
     
