--- a/content/radars/2020-07-image-build.yml
+++ b/content/radars/2020-07-image-build.yml
@@ -18,6 +18,7 @@ sections:
       used for existing deployments, while new applications have migrated to other solutions. Hence end users who are
       choosing a new CD solution should assess Jenkins alongside tools that support modern concepts such as GitOps
       (for example, Flux).
+video: https://www.youtube.com/embed/0792Q3l6tK8
 team:
   - name: Cheryl Hung
     photo: https://www.cncf.io/wp-content/uploads/2020/08/14233189_10101878603974740_6349536740498881867_n-1-1-500x500.jpg
